@@ -70,6 +70,15 @@
 
 	* config/avr/avr.h (TRAMPOLINE_TEMPLATE, INITIALIZE_TRAMPOLINE): Remove.
 
+	* config/bfin/bfin-protos.h (initialize_trampoline): Remove.
+	* config/bfin/bfin.c (bfin_asm_trampoline_template): New.
+	(bfin_trampoline_init): Rename from initialize_trampoline;
+	make static; update for target hook parameters.
+	(TARGET_ASM_TRAMPOLINE_TEMPLATE, TARGET_TRAMPOLINE_INIT): New.
+	* config/bfin/bfin.h (TRAMPOLINE_TEMPLATE): Move code to
+	bfin_asm_trampoline_template.
+	(INITIALIZE_TRAMPOLINE): Remove.
+
 2009-09-22  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/rs6000/rs6000.c (bdesc_2arg): Fix CODE_FOR_vector_gt* codes
